@@ -18,6 +18,7 @@ Version 0.XXXXX | Next Sunday AD | 889cb74
      * Moved basic POD from xs/FLTK.xs to lib/FLTK.pm
      * Allow systems to skip tests when Test::NeedsDisplay fails
      * Upgraded ask( ... ) and choice( ... ) to major C++/Perl API differences
+     * New, simple IO watcher example (echo server)
 
 Version 0.532006 | 2010-09-27 04:13:25Z (Mon, 27 Sep 2010) | 04ca288
 
